--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-number-format": "^4.4.4",
     "react-scripts": "4.0.2",
     "styled-components": "^5.2.1",
+    "typeface-roboto": "^1.1.13",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
